objects/AWS_S3_Object__c.object
<CustomObject>
    <description>Represents a bucket and object name as it exists on Amazon S3</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FULL_CONTROL</fullName>
                </value>
                <value>
                    <fullName>public-read</fullName>
                    <default>true</default>
                    <label>public-read</label>
                </value>
                <value>
                    <fullName>WRITE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>image/gif</fullName>
                </value>
                <value>
                    <fullName>image/jpeg</fullName>
                </value>
                <value>
                    <fullName>image/png</fullName>
                </value>
                <value>
                    <fullName>text/html</fullName>
                </value>
                <value>
                    <fullName>text/plain</fullName>
                </value>
                <value>
                    <fullName>gif</fullName>
                </value>
                <value>
                    <fullName>pdf</fullName>
                </value>
                <value>
                    <fullName>jpg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://s3.amazonaws.com/&apos;&amp; Bucket_Name__c &amp;&apos;/&apos;&amp; File_Name__c , 
&apos;https://s3.amazonaws.com/&apos; &amp; Bucket_Name__c &amp;&apos;/&apos;&amp; File_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open the resource in a new window</inlineHelpText>
        <label>Preview Link</label>
        <type>Text</type>
    </fields>
    <label>AWS S3 Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Access__c</columns>
        <columns>Bucket_Name__c</columns>
        <columns>Content_Type__c</columns>
        <columns>File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AWS-{0000}</displayFormat>
        <label>AWS S3 Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS S3 Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>